Fixed scrolling issue on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -9,6 +9,8 @@ body {
   /* background-color: #F0F0F0 !important; */
   background-color: #F3F4F6 !important;
   overflow-x: hidden !important;
+  max-width: 100vw !important;
+  width: 100vw !important;
 }
 
 p {
